Fix IE11 wrapping issues on lower resolutions
https://phabricator.wikimedia.org/T211936

--- a/english/css/styles.pcss
+++ b/english/css/styles.pcss
@@ -32,7 +32,8 @@
 
 	.infobox {
 		display: flex;
-		flex-direction: column;
+		flex-direction: row;
+		flex-wrap: wrap;
 		justify-content: space-between;
 		flex: 0 1 100%;
 
@@ -41,6 +42,10 @@
 		background-color: #f8f9fa;
 		padding: 0.25em 0.5em 0.25em 0;
 		margin: 0.5em 0 1em 1em;
+
+		> div {
+			width: 100%;
+		}
 	}
 
 	.infobox__text {
